--- a/school_choice_course_group/i18n/fr_BE.po
+++ b/school_choice_course_group/i18n/fr_BE.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-14 13:57+0000\n"
-"PO-Revision-Date: 2024-03-14 13:57+0000\n"
+"POT-Creation-Date: 2024-03-14 13:58+0000\n"
+"PO-Revision-Date: 2024-03-14 13:58+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -23,12 +23,12 @@ msgstr ""
 #. module: school_choice_course_group
 #: model:ir.model,name:school_choice_course_group.model_school_course_group
 msgid "Courses Group"
-msgstr ""
+msgstr "Unité d'enseignement"
 
 #. module: school_choice_course_group
 #: model:ir.model,name:school_choice_course_group.model_school_individual_bloc
 msgid "Individual Bloc"
-msgstr ""
+msgstr "Bloc individuel"
 
 #. module: school_choice_course_group
 #: model:ir.model.fields,field_description:school_choice_course_group.field_school_course_group__is_choice_course_group
@@ -53,7 +53,7 @@ msgstr ""
 #. module: school_choice_course_group
 #: model:ir.model,name:school_choice_course_group.model_school_bloc
 msgid "Program"
-msgstr ""
+msgstr "Programme"
 
 #. module: school_choice_course_group
 #: model:ir.model.fields,field_description:school_choice_course_group.field_school_course_group__total_credits_to_select
