--- a/school_management/i18n/fr_BE.po
+++ b/school_management/i18n/fr_BE.po
@@ -195,7 +195,7 @@ msgstr "<span>Cycle basé sur le profil d'enseignement :</span>"
 
 #. module: school_management
 #: model_terms:ir.ui.view,arch_db:school_management.report_attendance_for_student_content
-msgid "<u>Cours suivis dans la nouvelle structure:</u>"
+msgid "Cours suivis dans la nouvelle structure&amp;nbsp;:"
 msgstr ""
 
 #. module: school_management
